# magnet-segmentation-toolkit

./: .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  SECURITY.md  codecov.yml  frozen.spec  ignore_words.txt  index.html  pyproject.toml  robots.txt  setup.nsi  setup.py  sitemap.xml  tox.ini  versions.json  zizmor.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  ci_cd_night.yml  ci_cd_pr.yml  ci_cd_release.yml  label.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 245.miscellaneous.md  251.fixed.md  254.maintenance.md  256.maintenance.md  258.fixed.md  261.maintenance.md  265.maintenance.md  268.fixed.md  269.maintenance.md  271.fixed.md  273.maintenance.md  274.fixed.md  275.maintenance.md  276.maintenance.md  283.documentation.md  287.maintenance.md  291.miscellaneous.md  297.maintenance.md  297.test.md  302.dependencies.md  303.maintenance.md  305.maintenance.md  307.dependencies.md  310.dependencies.md  311.dependencies.md  312.dependencies.md  314.dependencies.md  316.maintenance.md  317.maintenance.md  320.dependencies.md
doc/source/: Contributing.rst  Getting_Started_PyCharm.rst  Getting_started.rst  changelog.rst  conf.py  create_documentation.bat  index.rst
doc/source/Toolkit/: api.rst  api_generic.rst  common_api.rst  index.rst  ui.rst
doc/source/User_guide/: index.rst
doc/source/examples/: index.rst  maxwell3d_segmentation_skew.py  pm_loss.mystnb
doc/source/getting_started/: index.rst  installation.rst  user_guide.rst
doc/styles/: .gitignore
examples/: Maxwell3D_Apply_Skewing.py  Maxwell3D_Relative_CS.py  Maxwell3D_Segmentation.py  Maxwell3D_Segmentation_Apply_Skew.py  Maxwell3D_Segmentation_Skew.py  Maxwell3D_Segmentation_Skewed.py  Readme.txt  copy_temp_input_data.py  index.rst  maxwell3d_segmentation_skew.py  remove_temp_input_data.py
examples/input_files/: e9_eMobility_IPM_1seg_cs_test_ANSYSEM_3D.aedt  e9_eMobility_IPM_ANSYSEM_3D.aedt
installer/: extract_version.py
installer/assets/scripts/: uninstaller_ubuntu.sh  uninstaller_yum.sh
installer/hooks/: hook-ansys.aedt.toolkits.magnet_segmentation.py
installer/linux/debian/: fpm-options-debian  installer.sh  magnet_segmentation_toolkit_prebuild.desktop  postInstallScript.sh
tests/: __init__.py  conftest.py  test_00_service_generic.py  test_03_mcad_aedt_flow.py  test_metadata.py
tests/input_data/: e9_ANSYSEM_3D.aedt  e9_built.mot  e9_built.vbs  e9_eMobility_IPM_2D_UT.vbs  e9_eMobility_IPM_3D.aedt  e9_eMobility_IPM_3D_segmented.aedt  e9_eMobility_IPM_3D_skewed.aedt  e9_eMobility_IPM__ANSYSEM_3D.aedt  toolkit_tran.aedt
tests/tests_aedt/: __init__.py  conftest.py  local_config.json  test_01_aedt.py  test_02_aedt.py  test_04_aedt.py  test_motor_workflow.py
tests/tests_aedt_common/: __init__.py  conftest.py  test_rest_workflow.py
tests/tests_common/: conftest.py  test_00_common.py
tests/tests_generic_aedt/: __init__.py  conftest.py  test_00_service_generic.py
tests/tests_mcad/: RPC_test_common.py  __init__.py  conftest.py  test_02_motorcad.py  test_03_mcad.py
version/: index.html
version/0.1/: .buildinfo  Contributing.html  Getting_started.html  announcement.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/Toolkit/: api.html  api_generic.html  index.html  ui.html
version/0.1/_modules/: index.html
version/0.1/_sources/: Getting_started.rst.txt  index.rst.txt
version/0.2/: .buildinfo  Contributing.html  Getting_started.html  announcement.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/Toolkit/: api.html  common_api.html  index.html  ui.html
version/0.2/_modules/: index.html
version/0.2/_sources/: Getting_started.rst.txt  index.rst.txt
version/0.3/: .buildinfo  Contributing.html  Getting_started.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/Toolkit/: announcement.html  api.html  common_api.html  index.html  ui.html
version/0.3/_modules/: index.html
version/0.3/_sources/: Contributing.rst.txt  index.rst.txt
version/0.3/_static/: documentation_options.js
version/0.3/examples/: index.html  maxwell3d_segmentation_skew.html
version/0.4/: .buildinfo  Contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.4/Toolkit/: announcement.html  api.html  index.html  ui.html
version/0.4/_modules/: index.html
version/0.4/_sources/: index.rst.txt
version/0.4/_static/: documentation_options.js
version/0.4/examples/: announcement.html  index.html  maxwell3d_segmentation_skew.html  maxwell3d_segmentation_skew.ipynb
version/0.4/getting_started/: index.html  installation.html  user_guide.html
version/0.5/: .buildinfo  Contributing.html  announcement.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.5/Toolkit/: api.html  index.html  ui.html
version/0.5/_modules/: index.html
version/0.5/_sources/: Contributing.rst.txt  index.rst.txt
version/0.5/examples/: index.html  maxwell3d_segmentation_skew.html  maxwell3d_segmentation_skew.ipynb
version/0.5/getting_started/: index.html  installation.html  user_guide.html
version/0.6/: Contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.6/Toolkit/: announcement.html  api.html  ui.html
version/0.6/_static/: documentation_options.js
version/0.6/examples/: index.html  maxwell3d_segmentation_skew.html  maxwell3d_segmentation_skew.ipynb
version/0.7/: Contributing.html  changelog.html  genindex.html  index.html  objects.inv  searchindex.js
version/0.8/: Contributing.html  changelog.html  genindex.html  index.html  objects.inv  search.html
version/0.9/: Contributing.html  index.html  objects.inv  searchindex.js
version/dev/: .buildinfo  Contributing.html  Getting_started.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/stable/: Contributing.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+778 files in other folders)
