[build-system]
requires = ["flit_core >=3.2,<3.11"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-magnet-segmentation-toolkit"
dynamic = ["version"]
description = "Toolkit used for automating the segmentation and skew of interior permanent magnet (IPM) and surface permanent magnet (SPM) motors using Ansys Electronics Desktop (AEDT)"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-aedt-toolkits-common[all]"
]

[project.optional-dependencies]
all = [
    "ansys-aedt-toolkits-common[all]"
]
tests = [
    "ansys-aedt-toolkits-common[tests]"
]
doc = [
    "ansys-aedt-toolkits-common[doc]"
]

[tool.flit.module]
name = "ansys.aedt.toolkits.magnet_segmentation"

[project.urls]
Source = "https://github.com/ansys/magnet-segmentation-toolkit.git"
Issues = "https://github.com/ansys/magnet-segmentation-toolkit.git/issues"
Documentation = "https://magnet.segmentation.toolkit.docs.pyansys.com/"
Releases = "https://github.com/ansys/magnet-segmentation-toolkit/releases"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.magnet_segmentation"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/magnet_segmentation/ui/*",
]

[tool.coverage.report]
show_missing = true
