[build-system]
requires = ["flit_core >=3.2,<3.11"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-magnet-segmentation-toolkit"
dynamic = ["version"]
description = "Toolkit used for automating the segmentation and skew of interior permanent magnet (IPM) and surface permanent magnet (SPM) motors using Ansys Electronics Desktop (AEDT)"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-aedt-toolkits-common[all]"
]

[project.optional-dependencies]
all = [
    "ansys-aedt-toolkits-common[all]"
]
tests = [
    "ansys-aedt-toolkits-common[tests]"
]
doc = [
    "ansys-aedt-toolkits-common[doc]"
]
freeze = [
    "pyinstaller"
]

[tool.flit.module]
name = "ansys.aedt.toolkits.magnet_segmentation"

[project.urls]
Source = "https://github.com/ansys/magnet-segmentation-toolkit.git"
Issues = "https://github.com/ansys/magnet-segmentation-toolkit.git/issues"
Documentation = "https://magnet.segmentation.toolkit.docs.pyansys.com/"
Releases = "https://github.com/ansys/magnet-segmentation-toolkit/releases"
Changelog = "https://github.com/ansys/magnet-segmentation-toolkit/blob/main/doc/source/changelog.rst"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.magnet_segmentation"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/magnet_segmentation/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.aedt.toolkits.magnet_segmentation"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/magnet-segmentation-toolkit/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansysmagnet-segmentation-toolkit/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
