[build-system]
requires = ["flit_core >=3.2,<3.11"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-magnet-segmentation-toolkit"
dynamic = ["version"]
description = "Toolkit used for automating the segmentation and skew of interior permanent magnet (IPM) and surface permanent magnet (SPM) motors using Ansys Electronics Desktop (AEDT)"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-aedt-toolkits-common[all]"
]

[project.optional-dependencies]
all = [
    "ansys-aedt-toolkits-common[all]"
]
tests = [
    "ansys-aedt-toolkits-common[tests]"
]
doc = [
    "ansys-aedt-toolkits-common[doc]"
]
freeze = [
    "pyinstaller"
]

[tool.flit.module]
name = "ansys.aedt.toolkits.magnet_segmentation"

[project.urls]
Source = "https://github.com/ansys/magnet-segmentation-toolkit.git"
Issues = "https://github.com/ansys/magnet-segmentation-toolkit.git/issues"
Documentation = "https://magnet.segmentation.toolkit.docs.pyansys.com/"
Releases = "https://github.com/ansys/magnet-segmentation-toolkit/releases"
Changelog = "https://github.com/ansys/magnet-segmentation-toolkit/blob/main/doc/source/changelog.rst"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "E",   # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",   # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",   # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",   # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH", # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",  # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "W",   # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
]
ignore = [
    # "D" - pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package

    # "TD" - flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
]

[tool.ruff.lint.pydocstyle]
# Use Numpy-style docstrings.
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["doc", "src", "tests"]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Ignore some pep8-naming rules in UI related files automatically generated by PySide6 designer
# "N801" (invalid-class-name)
# "N802" (invalid-function-name)
# "N803" (invalid-argument-name)
# "N806" (non-lowercase-variable-in-function)
"src/ansys/aedt/toolkits/magnet_segmentation/ui/windows/**_column.py" = ["N801", "N802", "N803"]
"src/ansys/aedt/toolkits/magnet_segmentation/ui/windows/**_page.py" = ["N801", "N802", "N803", "N806"]

[tool.coverage.run]
source = ["ansys.aedt.toolkits.magnet_segmentation"]
omit = [
    # Omit UI testing
    "src/ansys/aedt/toolkits/magnet_segmentation/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.aedt.toolkits.magnet_segmentation"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/magnet-segmentation-toolkit/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansysmagnet-segmentation-toolkit/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
